--- a/mystyles2.css
+++ b/mystyles2.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-.boxed {}
-
 body {
     font-size: 210%;
     background-image: url(Background%20for%20Star%20Weather.PNG);
@@ -86,7 +83,7 @@ a {
 #hfblk {
     background-color: steelblue;
     color: lightblue;
-    font-family: 'Raleway' sans-serif;
+    font-family: sans-serif;
     text-align: center;
     margin-bottom: 5px;
 }
@@ -128,13 +125,12 @@ dt {
 #hfdata {
     color: aliceblue;
     display: inline;
-    background-color:
 }
 
 #wfblk {
     background-color: steelblue;
     color: lightblue;
-    font-family: 'Raleway' sans-serif;
+    font-family: sans-serif;
     text-align: center;
     margin-bottom: 5px;
 }
@@ -162,7 +158,6 @@ dt {
     margin: 0px;
     margin-bottom: 5px;
     font-size: 80%;
-    border: auto;
     border-color: azure; 
 }
 
