--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,6 @@
 body {
     font-size: 200%;
-    background-image: url(Background%20for%20Star%20Weather.PNG);
+    background-image: url(snowycreek.PNG);
     background-size: cover;
     color: azure;
     text-align: center;
