--- a/mystyles.css
+++ b/mystyles.css
@@ -13,9 +13,9 @@ body {
 ul {
     text-align: center;
     padding: 8px 0px;
-    
+    color: black;
 }
 
 a {
-    color: aliceblue
+    color: black;
 }
