--- a/mystyles2.css
+++ b/mystyles2.css
@@ -4,7 +4,7 @@ body {
     background-size: cover;
     font-size: 130%;
 }
- 
+
 header {
     background-color: steelblue;
     color: azure;
@@ -38,7 +38,6 @@ a {
     margin-bottom: 52px;
     height: 1.6em;
     text-align: center;
-    
 }
 
 #tempblk1 ul {
@@ -69,7 +68,7 @@ a {
     font-size: 280px;
     width: 80%;
     text-align: center;
-    margin:  auto;
+    margin: auto;
     margin-bottom: -.2em;
     margin-top: -.2em;
     align-items: center;
@@ -129,6 +128,23 @@ div.scrollmenuhf {
     white-space: nowrap;
 }
 
+div.scrollmenuhf li {
+    display: inline-block;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+    text-align: center;
+    margin: 0px;
+    margin-bottom: 0px;
+    font-size: 30px;
+    border-style: solid;
+    border-color: azure;
+}
+
+div.scrollmenuhf li:hover {}
+
 div.scrollmenuwf {
     overflow: auto;
     white-space: nowrap;
@@ -150,23 +166,6 @@ div.scrollmenuwf li {
 }
 
 div.scrollmenuwf li:hover {}
-
-div.scrollmenuhf li {
-    display: inline-block;
-    color: white;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 30px;
-    padding-left: 30px;
-    text-align: center;
-    margin: 0px;
-    margin-bottom: 0px;
-    font-size: 30px;
-    border-style: solid;
-    border-color: azure;
-}
-
-div.scrollmenuhf li:hover {}
 
 footer {
     background-color: steelblue;
@@ -223,7 +222,7 @@ footer {
         font-size: 25px;
     }
     #tempblk3 {
-        margin-top:25px;
+        margin-top: 25px;
         margin-right: 0px;
         margin-bottom: -165px;
         width: 55%;
@@ -281,7 +280,8 @@ footer {
         font-size: 32px;
     }
 }
-@media only screen and (orientation:landscape){
+
+@media only screen and (orientation:landscape) {
     body {
         background-color: goldenrod;
     }
@@ -293,7 +293,7 @@ footer {
     nav {
         width: 20%;
         margin-top: -133px;
-        text-align: left; 
+        text-align: left;
         height: 112px
     }
     a {
@@ -302,13 +302,12 @@ footer {
         font-size: 23px;
         margin-left: 4px
     }
-     nav a {
-        font-size: 22px;   
+    nav a {
+        font-size: 22px;
     }
     #hfdate {
         display: inline-block;
         margin-right: -250px;
-        
     }
     #wfblk {
         padding: 0px;
@@ -347,7 +346,7 @@ footer {
         font-size: 25px;
     }
     #tempblk3 {
-        margin-top:25px;
+        margin-top: 25px;
         margin-right: 0px;
         margin-bottom: -165px;
         width: 55%;
@@ -361,9 +360,10 @@ footer {
     }
     footer {
         display: inline-block;
-        width: 100%;   
+        width: 100%;
     }
 }
+
 @media only screen and (min-device-width:1000px) {
     #tempblk1 li {
         font-size: 25px;
@@ -382,7 +382,7 @@ footer {
         font-size: 25px;
     }
     #tempblk3 {
-        margin-top:25px;
+        margin-top: 25px;
         margin-right: 0px;
         margin-bottom: -165px;
         width: 55%;
@@ -395,4 +395,18 @@ footer {
         font-size: 25px;
         margin-top: 47px;
     }
+}
+@media only screen and (min-device-width:1100px) {
+    header {
+        width: 100%;
+        font-size: 80%;
+        height: 70px
+    }
+    nav {
+        width: 30%;
+        margin-top: -78px;
+        height: 40px;
+        padding-top: 28px
+    }
+    
 }
